# checkout-app-clover

./: .env.example  .gitignore  README.md  notes.md  pyproject.toml
app/: clover_service.py  main.py
frontend/: index.css  index.html
tests/: README.md  test_create_order.py  test_oauth_storage.py  test_oauth_tokens.py  test_request_timeouts.py  test_token_expiration.py
