[project]
name = "checkout-app-clover"
version = "0.1.0"
description = "A web-based checkout application using the Clover payment gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
